--- a/html/admin.html
+++ b/html/admin.html
@@ -29,7 +29,7 @@
                 <h2>Voting Paused</h2>
                 <p>Voting buttons will be switched on automatically during each candidate's hust. No need to refresh.</p>
             </div>
-            <div id="candidate_info" style="display: none;">
+            <div id="admin_candidate_info">
                 <h2 id="candidate_name">Unknown Candidate</h2>
                 <p id="candidate_position">Unknown Position</p>
             </div>
