Added reset_vote button

--- a/html/admin_youvebeencaughton.html
+++ b/html/admin_youvebeencaughton.html
@@ -33,10 +33,16 @@
                 <h2 id="candidate_name">Unknown Candidate</h2>
                 <p id="candidate_position">Unknown Position</p>
             </div>
+            <br />
+            <br />
+
             <button id="enable_button" class="styled-button-8">Enable Voting</button>
             <button id="disable_button" class="styled-button-8">Disable Voting</button>
-
+            <button id="reset_vote" class="styled-button-8">Reset Vote To Zero</button>
+            
             <br />
+            <br />
+            
             Candidate Name: <input type="text" id="candidate_name_input" name="candidate_name_input"></input>
             Candidate Position: <input type="text" id="candidate_position_input" name="candidate_position_input"></input>
             <button class="styled-button-8" id="update_candidate">Update Candidate</button>
