--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
     <div class="header-container">
         <header class="clearfix">
             <h1 class="title">Hustings Support</h1>
-            <p>Want to show your support for a candidate's point? Cast your opinion below and watch as our swing-o-meter displays the overall reponse to a candidates hust.</p>
+            <p>Want to show your support for a candidate's point? Cast your opinion below and watch as our swing-o-meter displays the overall reponse to a candidate's hust.</p>
         </header>
     </div>
 
